some style improvements

--- a/src/libs/Network/uip/webserver/httpd-fs-src/index.html
+++ b/src/libs/Network/uip/webserver/httpd-fs-src/index.html
@@ -15,8 +15,17 @@
             float: left;
         }
         #display {
-            margin-top: 40px;
-            width: 30%;
+            padding-top: 40px;
+            width: 20%;
+            padding-bottom: 30px;
+            margin-right: 40px;
+            padding-left: 20px;
+            border: 1px solid #ccc;
+            margin-left: 20px;
+            background-color: #fafafa;
+        }
+        #controls {
+            margin-top: 15px;
         }
         #commands {
             float: right;
@@ -56,9 +65,9 @@
         .axis .output {
             font-size: 32px;
             font-weight: bold;
-            color: red;
+            color: #d00;
             font-family: monospace;
-            background-color: black;
+            background-color: #333;
             width: 50%;
             display: inline-block;
             padding: 15px;
